--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 
 /* Nav Bar Styling */
 
-nav {
+#navbar {
     width: 100%;
     height: 70px;
     background-color:#E80C11;
@@ -134,15 +134,6 @@ a {
 
 /* End of Contact Section Styling */
 
-
-
-
-
-
-
-
-
-
 /* Footer Styling */
 
 footer {
@@ -166,4 +157,15 @@ footer {
     color: white;
 }
 
-/* End of Footer Styling /*
+/* End of Footer Styling */
+
+@media (min-width:576px){
+    #section{
+        max-width: 540px;
+    }
+}
+@media (min-width:800px){
+    #section{
+        max-width: 760px;
+    }
+}
